--- a/stable/insert.ipynb
+++ b/stable/insert.ipynb
@@ -194,27 +194,24 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>93506</th>\n",
-       "      <td>700793</td>\n",
-       "      <td>Complicated (Avril Lavigne song)</td>\n",
-       "      <td>complicated (avril lavigne song)</td>\n",
-       "      <td>Complicated (Avril Lavigne song): \"'''Complica...</td>\n",
-       "      <td>14</td>\n",
-       "      <td>122</td>\n",
+       "      <th>289786</th>\n",
+       "      <td>2892553</td>\n",
+       "      <td>Long March 2</td>\n",
+       "      <td>long march 2</td>\n",
+       "      <td>Long March 2: '''Long March&amp;nbsp;2 rocket fami...</td>\n",
+       "      <td>15</td>\n",
+       "      <td>117</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           id                             title  \\\n",
-       "93506  700793  Complicated (Avril Lavigne song)   \n",
+       "             id         title   lower_title  \\\n",
+       "289786  2892553  Long March 2  long march 2   \n",
        "\n",
-       "                            lower_title  \\\n",
-       "93506  complicated (avril lavigne song)   \n",
-       "\n",
-       "                                              clean_text  count  cluster  \n",
-       "93506  Complicated (Avril Lavigne song): \"'''Complica...     14      122  "
+       "                                               clean_text  count  cluster  \n",
+       "289786  Long March 2: '''Long March&nbsp;2 rocket fami...     15      117  "
       ]
      },
      "execution_count": 7,
@@ -261,25 +258,6 @@
     "conn = sqlite3.Connection('data/data.db')\n",
     "cur = conn.cursor()\n",
     "\n",
-    "cur.execute(\"CREATE INDEX articles_idx_index ON articles(id)\")\n",
-    "conn.commit()\n",
-    "\n",
-    "cur.execute(\"CREATE INDEX embeddings_idx_index ON embeddings(id)\")\n",
-    "conn.commit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sqlite3\n",
-    "import pandas as pd\n",
-    "\n",
-    "conn = sqlite3.Connection('data/data.db')\n",
-    "cur = conn.cursor()\n",
-    "\n",
     "cur.execute(\"\"\"\n",
     "    create table ping (\n",
     "        id INTEGER PRIMARY KEY,\n",
@@ -307,6 +285,65 @@
     "conn.commit()\n",
     "\n",
     "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import sqlite3\n",
+    "\n",
+    "conn = sqlite3.Connection('data/data.db')\n",
+    "cur = conn.cursor()\n",
+    "\n",
+    "create_images = \"\"\"\n",
+    "    CREATE TABLE images (\n",
+    "        id INTEGER PRIMARY KEY,         \n",
+    "        url TEXT,\n",
+    "        articles_id INTEGER            \n",
+    "    );\n",
+    "\"\"\"\n",
+    "cur.execute(create_images)\n",
+    "conn.commit()\n",
+    "\n",
+    "insert_images = \"\"\"\n",
+    "    INSERT INTO images (url, articles_id) VALUES (?, ?);\n",
+    "\"\"\"\n",
+    "\n",
+    "urls = []\n",
+    "with open('data/links.jsonl', 'r', encoding='utf-8') as file:\n",
+    "    for row in file:\n",
+    "        urls.append(json.loads(row))\n",
+    "\n",
+    "cur.executemany(insert_images, [(x['image_url'], x['id']) for x in urls])\n",
+    "conn.commit()\n",
+    "\n",
+    "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sqlite3\n",
+    "import pandas as pd\n",
+    "\n",
+    "conn = sqlite3.Connection('data/data.db')\n",
+    "cur = conn.cursor()\n",
+    "\n",
+    "cur.execute(\"CREATE INDEX articles_idx_index ON articles(id)\")\n",
+    "conn.commit()\n",
+    "\n",
+    "cur.execute(\"CREATE INDEX embeddings_idx_index ON embeddings(id)\")\n",
+    "conn.commit()\n",
+    "\n",
+    "cur.execute(\"CREATE INDEX images_articles_idx_index ON images(articles_id)\")\n",
+    "conn.commit()"
    ]
   }
  ],
