--- a/test.ipynb
+++ b/test.ipynb
@@ -2,18 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "637207"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'transformed/data/selected_articles.jsonl'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[11], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m      2\u001b[0m i \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtransformed/data/selected_articles.jsonl\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m line \u001b[38;5;129;01min\u001b[39;00m file:\n\u001b[0;32m      5\u001b[0m         i \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n",
+      "File \u001b[1;32mc:\\Users\\jackv\\anaconda3\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:324\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    317\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[0;32m    318\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    319\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    320\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    321\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    322\u001b[0m     )\n\u001b[1;32m--> 324\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m io_open(file, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'transformed/data/selected_articles.jsonl'"
+     ]
     }
    ],
    "source": [
@@ -27,181 +29,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>url</th>\n",
-       "      <th>title</th>\n",
-       "      <th>text</th>\n",
-       "      <th>count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>12</td>\n",
-       "      <td>https://en.wikipedia.org/wiki/Anarchism</td>\n",
-       "      <td>Anarchism</td>\n",
-       "      <td>Anarchism is a political philosophy and moveme...</td>\n",
-       "      <td>242</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>39</td>\n",
-       "      <td>https://en.wikipedia.org/wiki/Albedo</td>\n",
-       "      <td>Albedo</td>\n",
-       "      <td>Albedo (; ) is the fraction of sunlight that i...</td>\n",
-       "      <td>159</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>290</td>\n",
-       "      <td>https://en.wikipedia.org/wiki/A</td>\n",
-       "      <td>A</td>\n",
-       "      <td>A, or a, is the first letter and the first vow...</td>\n",
-       "      <td>108</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>303</td>\n",
-       "      <td>https://en.wikipedia.org/wiki/Alabama</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>Alabama () is a state in the Southeastern regi...</td>\n",
-       "      <td>2260</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>305</td>\n",
-       "      <td>https://en.wikipedia.org/wiki/Achilles</td>\n",
-       "      <td>Achilles</td>\n",
-       "      <td>In Greek mythology, Achilles ( ) or Achilleus ...</td>\n",
-       "      <td>359</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>68675</th>\n",
-       "      <td>7017757</td>\n",
-       "      <td>https://en.wikipedia.org/wiki/Archie%20Hahn%20...</td>\n",
-       "      <td>Archie Hahn (actor)</td>\n",
-       "      <td>Archie Hahn (sometimes credited as Archie Hahn...</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>68676</th>\n",
-       "      <td>7017762</td>\n",
-       "      <td>https://en.wikipedia.org/wiki/Hallelujah%2C%20...</td>\n",
-       "      <td>Hallelujah, Baby!</td>\n",
-       "      <td>Hallelujah, Baby! is a musical with music by J...</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>68677</th>\n",
-       "      <td>7017821</td>\n",
-       "      <td>https://en.wikipedia.org/wiki/The%20Practical%...</td>\n",
-       "      <td>The Practical Pig</td>\n",
-       "      <td>The Practical Pig is a Silly Symphony cartoon....</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>68678</th>\n",
-       "      <td>7018098</td>\n",
-       "      <td>https://en.wikipedia.org/wiki/Wanda%20%28film%29</td>\n",
-       "      <td>Wanda (film)</td>\n",
-       "      <td>Wanda is a 1970 American independent drama fil...</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>68679</th>\n",
-       "      <td>7018181</td>\n",
-       "      <td>https://en.wikipedia.org/wiki/Anonymous%20func...</td>\n",
-       "      <td>Anonymous function</td>\n",
-       "      <td>In computer programming, an anonymous function...</td>\n",
-       "      <td>30</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>68680 rows × 5 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "            id                                                url  \\\n",
-       "0           12            https://en.wikipedia.org/wiki/Anarchism   \n",
-       "1           39               https://en.wikipedia.org/wiki/Albedo   \n",
-       "2          290                    https://en.wikipedia.org/wiki/A   \n",
-       "3          303              https://en.wikipedia.org/wiki/Alabama   \n",
-       "4          305             https://en.wikipedia.org/wiki/Achilles   \n",
-       "...        ...                                                ...   \n",
-       "68675  7017757  https://en.wikipedia.org/wiki/Archie%20Hahn%20...   \n",
-       "68676  7017762  https://en.wikipedia.org/wiki/Hallelujah%2C%20...   \n",
-       "68677  7017821  https://en.wikipedia.org/wiki/The%20Practical%...   \n",
-       "68678  7018098   https://en.wikipedia.org/wiki/Wanda%20%28film%29   \n",
-       "68679  7018181  https://en.wikipedia.org/wiki/Anonymous%20func...   \n",
-       "\n",
-       "                     title                                               text  \\\n",
-       "0                Anarchism  Anarchism is a political philosophy and moveme...   \n",
-       "1                   Albedo  Albedo (; ) is the fraction of sunlight that i...   \n",
-       "2                        A  A, or a, is the first letter and the first vow...   \n",
-       "3                  Alabama  Alabama () is a state in the Southeastern regi...   \n",
-       "4                 Achilles  In Greek mythology, Achilles ( ) or Achilleus ...   \n",
-       "...                    ...                                                ...   \n",
-       "68675  Archie Hahn (actor)  Archie Hahn (sometimes credited as Archie Hahn...   \n",
-       "68676    Hallelujah, Baby!  Hallelujah, Baby! is a musical with music by J...   \n",
-       "68677    The Practical Pig  The Practical Pig is a Silly Symphony cartoon....   \n",
-       "68678         Wanda (film)  Wanda is a 1970 American independent drama fil...   \n",
-       "68679   Anonymous function  In computer programming, an anonymous function...   \n",
-       "\n",
-       "       count  \n",
-       "0        242  \n",
-       "1        159  \n",
-       "2        108  \n",
-       "3       2260  \n",
-       "4        359  \n",
-       "...      ...  \n",
-       "68675      6  \n",
-       "68676     18  \n",
-       "68677      5  \n",
-       "68678      6  \n",
-       "68679     30  \n",
-       "\n",
-       "[68680 rows x 5 columns]"
+       "[(300670, 46375, 'Perkin Warbeck', 'perkin warbeck', 63, 65)]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df"
+    "import sqlite3\n",
+    "\n",
+    "conn = sqlite3.Connection('stable/data/data.db')\n",
+    "cur = conn.cursor()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(23749,)]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import json  \n",
+    "\n",
+    "with open('guess.json', 'r') as file:\n",
+    "    df = json.load(file)\n",
+    "\n",
+    "title = df[2]['url'].split('/wiki/')[-1].lower()\n",
+    "\n",
+    "cur.execute(f\"\"\"\n",
+    "    select id\n",
+    "    from articles\n",
+    "    where lower(title) == '{title}'\n",
+    "    limit 1\n",
+    "\"\"\")\n",
+    "\n",
+    "cur.fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Salome (play)', 56)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sqlite3\n",
+    "\n",
+    "conn = sqlite3.Connection('stable/data/data.db')\n",
+    "cur = conn.cursor()\n",
+    "\n",
+    "cur.execute(f\"\"\"\n",
+    "    select a.title, a.count\n",
+    "    from images i join articles a on i.articles_id == a.id\n",
+    "    where url is not null and a.count > 50\n",
+    "    order by random()\n",
+    "    limit 1\n",
+    "\"\"\")\n",
+    "\n",
+    "print(cur.fetchall())\n",
+    "conn.close()"
    ]
   }
  ],
